# django-datetime-expressions

./: LICENSE  Pipfile  README.md  README_EN.md  README_JP.md  pyproject.toml  runtests.py
.github/workflows/: tests.yml  versioning.yml  workflow.yml
django_datetime_expressions/: expressions.py
django_datetime_expressions/tests/: models.py  test_mysql_settings.py  test_postgres_settings.py  test_sqlite_settings.py  tests.py
src/datetime_expressions/: __init__.py  expressions.py
tests/: models.py  test_mysql_settings.py  test_postgres_settings.py  test_sqlite_settings.py  tests.py
